--- a/docker-compose-python/dockerfile
+++ b/docker-compose-python/dockerfile
@@ -1,5 +1,7 @@
-FROM python:3.8-alpine
+FROM python:3.10
 
 COPY ./requirements.txt ./
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip list
